--- a/Task-Tracker-CLI/Task-Tracker-CLI.csproj
+++ b/Task-Tracker-CLI/Task-Tracker-CLI.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.PowerShell.5.ReferenceAssemblies" Version="1.1.0" />
+    <PackageReference Include="System.Management.Automation" Version="7.4.6" />
   </ItemGroup>
 
 </Project>
