🚧 chore: Removed Comments and added Nice Info

--- a/Task-Tracker/Task-Tracker.csproj
+++ b/Task-Tracker/Task-Tracker.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="TaskTracker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task.cs" />
   </ItemGroup>
